# analog-mlir

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/analog-mlir/: CMakeLists.txt
include/analog-mlir/Dialect/: CMakeLists.txt
include/analog-mlir/Dialect/Analog/: CMakeLists.txt
include/analog-mlir/Dialect/Analog/Conversion/: ConvertAnalogToDebugShims.h  ConvertAnalogToGolemBackend.h  FinalizeGolemIntrinsics.h  Passes.h
include/analog-mlir/Dialect/Analog/IR/: AnalogBase.h  AnalogBase.td  AnalogDialect.h  AnalogOps.h  (+5 more)
include/analog-mlir/Transforms/: CMakeLists.txt
include/analog-mlir/Transforms/NN/: CleanupTransposeScaffolding.h  Passes.h  TagNNLayerIndex.h
lib/Dialect/Analog/Conversion/: CMakeLists.txt  ConvertAnalogToDebugShims.cpp  ConvertAnalogToGolemBackend.cpp  FinalizeGolemIntrinsics.cpp  Passes.cpp
lib/Dialect/Analog/IR/: AnalogBase.cpp  AnalogOps.cpp  AnalogTypes.cpp  CMakeLists.txt
lib/Dialect/Analog/Transforms/: CMakeLists.txt  CombineArrayResults.cpp  CombineTileResults.cpp  ExecuteArray.cpp  ExecuteTiles.cpp  GroupedPasses.cpp  IntroduceAnalogOps.cpp  MaterializeMatrixFromTensor.cpp  MaterializeTilesFromWeights.cpp  MaterializeVectorFromTensor.cpp  MaterializeWeightsFromConst.cpp  PartitionLayers.cpp  PartitionMatrix.cpp  PartitionVector.cpp  Passes.cpp  PlaceMatrices.cpp  PlaceTiles.cpp  PlaceVTiles.cpp  PlaceVectors.cpp  ReplaceMatmul.cpp
lib/Transforms/NN/: CMakeLists.txt  CleanupTransposeScaffolding.cpp  Passes.cpp  TagNNLayerIndex.cpp
tools/: CMakeLists.txt
tools/analog-mlir-opt/: CMakeLists.txt  analog-mlir-opt.cpp
(+22 files in other folders)
